[gd_scene load_steps=17 format=3 uid="uid://bghvtati0dphu"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_5yjgf"]
[ext_resource type="Texture2D" uid="uid://brxqvoxw8tnyr" path="res://assets/NinjaAdventure(SupporterEdition)/Actor/Characters/Boy/SeparateAnim/Walk.png" id="2_d10bn"]
[ext_resource type="Script" path="res://scripts/player/player_dialogic_area.gd" id="3_a7bb0"]
[ext_resource type="PackedScene" uid="uid://bdcoxajy4bkl7" path="res://custom_addons/inventory/scenes/player_inventory.tscn" id="4_pmspx"]
[ext_resource type="Script" path="res://custom_addons/inventory/scripts/player_pickupable_item_area.gd" id="5_3h2ui"]
[ext_resource type="PackedScene" uid="uid://bywnmmwprecpq" path="res://scenes/attack_box.tscn" id="6_myc03"]
[ext_resource type="Script" path="res://scripts/movement.gd" id="7_0mnvx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fc5dt"]
radius = 17.0294

[sub_resource type="CircleShape2D" id="CircleShape2D_xc3v7"]
radius = 17.0294

[sub_resource type="Animation" id="Animation_5tuxy"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EquipableWeapon:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-6, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EquipableWeapon:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EquipableWeapon:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_kwivb"]
resource_name = "swing"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EquipableWeapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0.218461, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, -0.218166, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.218461, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EquipableWeapon:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-6, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EquipableWeapon:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_40ooq"]
resource_name = "weapon_idle"
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EquipableWeapon:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-6, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EquipableWeapon:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EquipableWeapon:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ru0hu"]
_data = {
"RESET": SubResource("Animation_5tuxy"),
"swing": SubResource("Animation_kwivb"),
"weapon_idle": SubResource("Animation_40ooq")
}

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_pbeg1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u2t0k"]
size = Vector2(25, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cqv7g"]
size = Vector2(10, 5)

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 257
motion_mode = 1
script = ExtResource("1_5yjgf")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_d10bn")
offset = Vector2(0, -3)
hframes = 4
vframes = 4

[node name="DialogicArea" type="Area2D" parent="."]
position = Vector2(0, -2)
collision_layer = 0
collision_mask = 16
script = ExtResource("3_a7bb0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogicArea"]
shape = SubResource("CircleShape2D_fc5dt")

[node name="UI" type="CanvasLayer" parent="."]

[node name="PlayerInventory" parent="UI" node_paths=PackedStringArray("player") instance=ExtResource("4_pmspx")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -117.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 41.0
grow_horizontal = 0
player = NodePath("../..")

[node name="PickupableItemArea" type="Area2D" parent="."]
position = Vector2(0, -2)
collision_layer = 0
collision_mask = 32
script = ExtResource("5_3h2ui")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupableItemArea"]
shape = SubResource("CircleShape2D_xc3v7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ru0hu")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_pbeg1")
anim_player = NodePath("../AnimationPlayer")

[node name="EquipableWeapon" type="Sprite2D" parent="."]
position = Vector2(-6, 0)

[node name="AttackBox" parent="." instance=ExtResource("6_myc03")]

[node name="CollisionShape2D" parent="AttackBox" index="0"]
position = Vector2(12.5, 0)
shape = SubResource("RectangleShape2D_u2t0k")

[node name="movement" type="Node" parent="." node_paths=PackedStringArray("character")]
script = ExtResource("7_0mnvx")
speed = 150.0
character = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_cqv7g")
debug_color = Color(0.647059, 0.427451, 0.772549, 0.419608)

[editable path="AttackBox"]
